--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- Initialize a new Node.js project  - Add Express, jsonwebtoken, mongoose to it as a dependency   - Create index.js  - Add route skeleton for user login, signup, purchase a course, sees all courses, sees the purchased courses course  - Add routes for admin login, admin signup, create a course, delete a course, add course content.  - Define the schema for User, Admin, Course, Purchase  - Add a database (mongodb), use dotenv to store the database connection string  - Add middlewares for user and admin auth  - Complete the routes for user login, signup, purchase a course, see course (Extra points - Use express routing to better structure your routes)  - Create the frontend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.16.1"
+    "mongoose": "^8.16.1",
+    "nodemon": "^3.1.10"
   }
 }
